	--- 9.10.1b1 released ---

3885.	[port]		Use 'open()' rather than 'file()' to open files in
			python.

3884.	[protocol]	Add CDS and CDNSKEY record types. [RT #36333]

3881.	[bug]		Address memory leak with UPDATE error handling.
			[RT #36303]

3880.	[test]		Update ans.pl to work with new TSIG support in
			Net::DNS; add additional Net::DNS version prerequisite
			checks. [RT #36327]

3879.	[func]		Add version printing option to various BIND utilities.
			[RT #10686]

3878.	[bug]		Using the incorrect filename for a DLZ module
			caused a segmentation fault on startup. [RT #36286]

3877.	[bug]		Inserting and deleting parent and child nodes
			in response policy zones could trigger an assertion
			failure. [RT #36272]

3874.	[test]		Check that only "check-names master" is needed for
			updates to be accepted.

3873.	[protocol]	Only warn for SPF without TXT spf record. [RT #36210]

3872.	[bug]		Address issues found by static analysis. [RT #36209]

3871.	[bug]		Don't publish an activated key automatically before
			its publish time. [RT #35063]

3870.	[placeholder]

3869.	[doc]		Document that in-view zones cannot be used for
			response policy zones. [RT #35941]

3868.	[bug]		isc_mem_setwater incorrectly cleared hi_called
			potentially leaving over memory cleaner running.
			[RT #35270]

3866.	[bug]		Named could die on disk full in generate_session_key.
			[RT #36119]

3865.	[test]		Improved testability of the red-black tree
			implementation and added unit tests. [RT #35904]

3864.	[bug]		RPZ didn't work well when being used as forwarder.
			[RT #36060]

3863.	[bug]		The "E" flag was missing from the query log as a
			unintended side effect of code rearrangement to
			support EDNS EXPIRE. [RT #36117]

3862.	[cleanup]	Return immediately if we are not going to log the
			message in ns_client_dumpmessage.

3861.	[security]	Missing isc_buffer_availablelength check results
			in a REQUIRE assertion when printing out a packet
			(CVE-2014-3859).  [RT #36078]
